<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- App Name/Logo -->
    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="200dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:tintMode="src_in" />

    <ImageButton
        android:id="@+id/toolbarBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_btn"
        android:padding="10dp"
        android:src="@drawable/ic_back_black" />


    <!-- Email Input -->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoIv"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FFFEFE"
        android:elevation="16dp"
        app:cardCornerRadius="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/labelTv"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/enter_current_password"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currentPasswordTil"
                style="@style/CustomTextInputLayout"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:startIconTint="@color/black"
                app:passwordToggleTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/labelTv"
                android:layout_marginTop="10dp"
                android:hint="@string/current_password"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_gray">

                <EditText
                    android:id="@+id/currentPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newtPasswordTil"
                style="@style/CustomTextInputLayout"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:startIconTint="@color/black"
                app:passwordToggleTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/currentPasswordTil"
                android:layout_marginTop="10dp"
                android:hint="@string/new_password"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_gray">

                <EditText
                    android:id="@+id/newPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newtConfirmPasswordTil"
                style="@style/CustomTextInputLayout"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
                app:startIconTint="@color/black"
                app:passwordToggleTint="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newtPasswordTil"
                android:layout_marginTop="10dp"
                android:hint="@string/new_confirm_password"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_lock_gray">

                <EditText
                    android:id="@+id/newConfirmPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/changePasswordBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newtConfirmPasswordTil"
                android:layout_marginTop="12dp"
                android:text="@string/change_password_button"
                android:textColor="@color/white"
                app:cornerRadius="8dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>

