<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/ToolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back_btn"/>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/edit_profile_page" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorGray02" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Relative layout with option to pick and show Image -->

            <RelativeLayout
                android:id="@+id/profileRl"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"

                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profileIv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorGray01"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_person_white"
                    app:shapeAppearanceOverlay="@style/ImageStyle_circle" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/profileImagePickFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/add_Fab_Btn"
                    android:src="@drawable/ic_add_photo_white"
                    app:backgroundTint="@color/light_mode_accent"
                    app:fabSize="mini"
                    app:tint="@color/white" />


            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profileRl"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:startIconDrawable="@drawable/ic_person_gray">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dobTil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameTil"
                android:layout_marginTop="10dp"
                android:hint="@string/dob_dd_mm_yyyy"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:startIconDrawable="@drawable/ic_calender_white">

                <EditText
                    android:id="@+id/dobEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/emailTil"
                android:layout_below="@id/dobTil"
                android:layout_marginTop="10dp"
                android:hint="@string/email_edit_profile"
                app:startIconDrawable="@drawable/ic_email_white"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailEt"
                    android:inputType="textEmailAddress"
                    />


            </com.google.android.material.textfield.TextInputLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/emailTil"
    android:id="@+id/phoneInputRl"
    android:layout_marginTop="5dp">

    <com.hbb20.CountryCodePicker
        android:id="@+id/countryCodePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:minWidth="60dp"
        android:minHeight="56dp"
        android:gravity="center"
        app:ccp_contentColor="@color/colorGray01"
        app:ccp_autoDetectCountry="true"
        app:ccp_rememberLastSelection="true"
        app:ccp_showFlag="false"
        app:ccp_showNameCode="false"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_toEndOf="@+id/countryCodePicker"
        android:hint="@string/phone_number_edit_profile"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        android:layout_marginStart="5dp"
        app:boxCornerRadiusTopStart="8dp"
        app:startIconDrawable="@drawable/ic_call_white"
        android:id="@+id/phoneNumberTil">

        <EditText
            android:id="@+id/phoneNumberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>



</RelativeLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneInputRl"
                android:layout_marginTop="20dp"
                android:text="@string/update_button"
                app:cornerRadius="8dp"
                android:textColor="@color/white"
                android:id="@+id/updateBtn"/>


        </RelativeLayout>

    </ScrollView>

</LinearLayout>